# reqres_in

./: .gitignore  README.md  pyproject.toml
framework/: data.py  demo_qa.py
tests/: conftest.py  test_create_user.py  test_get_list_users.py  test_update_info_about_user.py
tests/ui/: test_for_demoshop.py
utils/: base_session.py
